Fixed Chrome on iOS

--- a/styles/Header.css
+++ b/styles/Header.css
@@ -81,7 +81,7 @@ color: var(--clr-grey);
         transform: translateX(100%);
         transition: transform 350ms ease-out;
         -webkit-transform: translateX(100%);
-        -webkit-transition: transform 350ms ease-out;
+        -webkit-transition: -webkit-transform 350ms ease-out;
         background: hsl( 0 0% 0% / 0.75);
         backdrop-filter: blur(8px); 
         -webkit-backdrop-filter: blur(8px); 
